--- a/workflow-templates/ci.yml
+++ b/workflow-templates/ci.yml
@@ -2,7 +2,7 @@ name: ci (lint & test & build Check)
 
 on:
   pull_request:
-    branches: [main, develop]
+    branches: [$default-branch]
 
 jobs:
   changes:
